crates/crochet_parser/src/snapshots/crochet_parser__tests__strings-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"\\\"hello, \\\\\\\"world\\\\\\\"!\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 20,
                    },
                },
                span: 0..20,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 19,
                        },
                    },
                    span: 0..19,
                    kind: Lit(
                        Str(
                            Str {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 19,
                                    },
                                },
                                span: 0..19,
                                value: "hello, \"world\"!",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
