crates/crochet_parser/src/snapshots/crochet_parser__tests__strings.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\"\";\"#)"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..3,
                expr: Lit(
                    Str(
                        Str {
                            span: 0..2,
                            value: "",
                        },
                    ),
                ),
            },
        ],
    },
)
