crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"`(${x}, ${y})`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..14,
                expr: TemplateLiteral(
                    TemplateLiteral {
                        span: 0..14,
                        exprs: [
                            Ident(
                                Ident {
                                    span: 4..5,
                                    name: "x",
                                },
                            ),
                            Ident(
                                Ident {
                                    span: 10..11,
                                    name: "y",
                                },
                            ),
                        ],
                        quasis: [
                            TemplateElem {
                                span: 1..2,
                                raw: Str(
                                    Str {
                                        span: 1..2,
                                        value: "(",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 1..2,
                                        value: "(",
                                    },
                                ),
                            },
                            TemplateElem {
                                span: 6..8,
                                raw: Str(
                                    Str {
                                        span: 6..8,
                                        value: ", ",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 6..8,
                                        value: ", ",
                                    },
                                ),
                            },
                            TemplateElem {
                                span: 12..13,
                                raw: Str(
                                    Str {
                                        span: 12..13,
                                        value: ")",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 12..13,
                                        value: ")",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
