crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"`Hello, \"world\"`\"#)"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 16,
                    },
                },
                span: 0..16,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 16,
                        },
                    },
                    span: 0..16,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [],
                            quasis: [
                                TemplateElem {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 16,
                                        },
                                    },
                                    span: 1..15,
                                    raw: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                            },
                                            span: 1..15,
                                            value: "Hello, \"world\"",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 16,
                                                },
                                            },
                                            span: 1..15,
                                            value: "Hello, \"world\"",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
