crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-7.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"`a \\\\u2212 b`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..12,
                expr: Expr {
                    span: 0..12,
                    kind: TemplateLiteral(
                        TemplateLiteral {
                            exprs: [],
                            quasis: [
                                TemplateElem {
                                    span: 1..11,
                                    raw: Str(
                                        Str {
                                            span: 1..11,
                                            value: "a \\u2212 b",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 1..11,
                                            value: "a − b",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ],
    },
)
