crates/crochet_parser/src/snapshots/crochet_parser__tests__template_literals-9.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"if cond { `${foo}` } else { `${bar}` }\"#)"
---
Program {
    body: [
        Expr {
            span: 0..38,
            expr: IfElse(
                IfElse {
                    span: 0..38,
                    cond: Ident(
                        Ident {
                            span: 3..7,
                            name: "cond",
                        },
                    ),
                    consequent: TemplateLiteral(
                        TemplateLiteral {
                            span: 10..18,
                            exprs: [
                                Ident(
                                    Ident {
                                        span: 13..16,
                                        name: "foo",
                                    },
                                ),
                            ],
                            quasis: [
                                TemplateElem {
                                    span: 11..11,
                                    raw: Str(
                                        Str {
                                            span: 11..11,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 11..11,
                                            value: "",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    span: 17..17,
                                    raw: Str(
                                        Str {
                                            span: 17..17,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 17..17,
                                            value: "",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                    alternate: Some(
                        TemplateLiteral(
                            TemplateLiteral {
                                span: 28..36,
                                exprs: [
                                    Ident(
                                        Ident {
                                            span: 31..34,
                                            name: "bar",
                                        },
                                    ),
                                ],
                                quasis: [
                                    TemplateElem {
                                        span: 29..29,
                                        raw: Str(
                                            Str {
                                                span: 29..29,
                                                value: "",
                                            },
                                        ),
                                        cooked: Str(
                                            Str {
                                                span: 29..29,
                                                value: "",
                                            },
                                        ),
                                    },
                                    TemplateElem {
                                        span: 35..35,
                                        raw: Str(
                                            Str {
                                                span: 35..35,
                                                value: "",
                                            },
                                        ),
                                        cooked: Str(
                                            Str {
                                                span: 35..35,
                                                value: "",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
