crates/crochet_parser/src/snapshots/crochet_parser__tests__top_level_expressions.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"a + b;\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 6,
                    },
                },
                span: 0..6,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                        },
                    },
                    span: 0..5,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: Add,
                            left: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 1,
                                    },
                                },
                                span: 0..1,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 1,
                                            },
                                        },
                                        span: 0..1,
                                        name: "a",
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 4,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 5,
                                    },
                                },
                                span: 4..5,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                        },
                                        span: 4..5,
                                        name: "b",
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
