crates/crochet_parser/src/snapshots/crochet_parser__tests__top_level_parse_error.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let obj = {foo: \"hello\"};\n            let foo = obj.\"#)"
---
Err(
    "failed to parse: 'let foo = obj.'",
)
