crates/crochet_parser/src/snapshots/crochet_parser__tests__trailing_comments-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(trailing_comments_after_str_lit)
---
Program {
    body: [
        VarDecl {
            span: 9..42,
            pattern: Ident(
                BindingIdent {
                    span: 13..14,
                    id: Ident {
                        span: 13..14,
                        name: "x",
                    },
                },
            ),
            type_ann: None,
            init: Some(
                Lit(
                    Str(
                        Str {
                            span: 17..24,
                            value: "hello",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
