crates/crochet_parser/src/snapshots/crochet_parser__tests__trailing_comments-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(trailing_comments_after_bool_lit)
---
Program {
    body: [
        VarDecl {
            span: 9..37,
            pattern: Ident(
                BindingIdent {
                    span: 13..14,
                    id: Ident {
                        span: 13..14,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lit(
                    Bool(
                        Bool {
                            span: 17..37,
                            value: true,
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
